--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .navBar {
-    padding: 10px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background-color: #C0C0C0;
 }
