--- a/src/components/CartegoryList/CategoryList.css
+++ b/src/components/CartegoryList/CategoryList.css
@@ -1,6 +1,6 @@
 .list {
-    padding-block: 3rem;
     display: flex;
+    align-items: center;
     font-size: 20px;
 }
 .listLi {
@@ -15,4 +15,9 @@
     color: black;
 }
 
+.listItem-cart {
+    padding-inline: 1rem;
+    text-decoration: none;
+    color: black;
 
+}
